--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 # SonarQube server URL, e.g. http://localhost:9000
-sonar.host.url=http://sonarqube:9000
+sonar.host.url=http://localhost:7000
 
 # must be unique in a given SonarQube instance
 sonar.projectKey=DLOR-Loan
