update project properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,8 @@
 # SonarQube server URL, e.g. http://localhost:9000
-sonar.host.url=http://localhost:7000
+sonar.host.url=http://203.154.100.102
+
+sonar.login=admin
+sonar.password=admin
 
 # must be unique in a given SonarQube instance
 sonar.projectKey=DLOR-Loan
