update cicd test

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 # SonarQube server URL, e.g. http://localhost:9000
-sonar.host.url=http://203.154.100.102
+sonar.host.url=http://203.154.100.102/
 
 sonar.login=admin
 sonar.password=admin
