off debug sonarqube

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -30,5 +30,5 @@ sonar.go.tests.reportPaths=sonarqube-report/unit-report.json
 sonar.go.coverage.reportPaths=sonarqube-report/coverage-report.out
 sonar.go.coverage.dtdVerification=false 
 
-sonar.showProfiling=true
-sonar.log.level=DEBUG
+# sonar.showProfiling=true
+# sonar.log.level=DEBUG
