--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,5 @@
 # SonarQube server URL, e.g. http://localhost:9000
-sonar.host.url=http://203.154.100.102/
-# sonar.host.url=http://172.18.0.2:9000/
+sonar.host.url=http://localhost:9000
 
 sonar.login=admin
 sonar.password=admin
